# desktop_v1

./: .gitignore  Cargo.toml  README.md
clawborrator-supervisor/: Cargo.toml
clawborrator-supervisor/src/: auth.rs  logging.rs  main.rs  oauth.rs  sessions.rs  spawn.rs  status.rs  tray.rs
clawborrator-supervisor/src/autostart/: linux.rs  macos.rs  mod.rs  windows.rs
clawborrator-supervisor/src/parser_plugins/: builtin.rs  mod.rs  tests.rs  watcher.rs
