[workspace]
resolver = "2"
members = ["clawborrator-supervisor"]

[workspace.package]
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "io-util", "net", "sync"] }
tokio-tungstenite  = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util       = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap               = { version = "4", features = ["derive", "env"] }
hostname           = "0.4"
dirs               = "5"
url                = "2"
uuid               = { version = "1", features = ["v4"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
webbrowser         = "1"
sha2               = "0.10"
base64             = "0.22"
rand               = "0.8"
portable-pty       = "0.8"
vt100              = "0.15"
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
