[package]
name        = "clawborrator-supervisor"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description = "clawborrator desktop daemon — connects to the hub /supervisor WS and exposes session control."

[[bin]]
name = "clawborrator-supervisor"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }
futures-util       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
hostname           = { workspace = true }
dirs               = { workspace = true }
url                = { workspace = true }
uuid               = { workspace = true }
reqwest            = { workspace = true }
webbrowser         = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }
rand               = { workspace = true }
portable-pty       = { workspace = true }
vt100              = { workspace = true }
chrono             = { workspace = true }
tracing-appender   = { workspace = true }
whoami             = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys        = { workspace = true }
